Don't display unless is owner or admin

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1033,6 +1033,7 @@ div#post-comment-reply-container
 
 .notification-post-saved,
 .notification-post-fail
+	opacity: 0
 	height: 25px
 	position: fixed
 	top: -25px
