Add link to user page on post view details

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -539,6 +539,9 @@ a
 	& .author-name
 		display: block
 		font-size: 1.2em
+		& a:hover, & a:active, & a:focus
+			color: white
+			text-decoration: underline
 		+media-xs
 			font-size: 1em
 			display: inline-block
