Some tweaks and little bonus gimmick

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -163,6 +163,7 @@ a
 	display: block
 	font-size: 1.6em
 	padding: 15px 0 5px 0
+	z-index: 1
 	//+text-shadow(1px, 1px, 0, darken($color_background, 3%), 0.5)
 
 	+media-xs
@@ -327,6 +328,7 @@ a
 	text-align: center
 	position: relative
 	top: 12px
+	z-index: 2
 	+box-shadow(2px, 2px, 0, black, .1)
 	+border-radius(50%)
 
@@ -366,6 +368,41 @@ a
 	&.text
 		background-color: lighten($color_brand_secondary, 20%)
 
+
+.post-index-item-type-ripple
+	display: none
+	float: left
+	background-color: darken($color_background, 3%)
+	z-index: 0
+	transform: scale(1)
+	animation: ripple 1s ease-out forwards
+	opacity: 1
+	+border-radius(50%)
+	+media-xs
+		display: none !important
+	+media-sm
+		position: absolute
+		top: -10px
+		left: 55px
+		width: 100px
+		height: 100px
+	+media-md
+		position: absolute
+		top: -8px
+		left: 55px
+		width: 100px
+		height: 100px
+	+media-lg
+		position: absolute
+		top: -8px
+		left: 55px
+		width: 100px
+		height: 100px
+
+@keyframes ripple
+	100%
+		opacity: 0
+		transform: scale(1.5)
 
 /* //post-index */
 /* post-view */
@@ -2175,25 +2212,3 @@ a.cke_button_on, a.cke_button_on:hover, a.cke_button_on:focus, a.cke_button_on:a
 .cd-active.cd-dropdown ul li span:hover
 	background: white
 	color: $color_brand_secondary
-
-
-.ink
-	display: block
-	position: absolute
-	border: 2px solid $color_brand_main
-	background: transparent
-	border-radius: 100%
-	transform: scale(0)
-	&.animate
-		animation: ripple 0.65s ease-out
-
-.up .ink
-	background: $color_upvote
-
-.down .ink
-	background: $color_downvote
-
-@keyframes ripple
-	100%
-		opacity: 0
-		transform: scale(1)
