--- a/blender-today/application/templates/users/view.html
+++ b/blender-today/application/templates/users/view.html
@@ -72,9 +72,12 @@
 				<div class="user-view-info-meta">
 					<span class="karma">Karma {{user.karma.positive}}</span>
 					<br/>
-					<span class="lastseen">Last seen {{user.current_login_at.strftime('%d %B %Y at %H:%M')}}</span>
+					{% if user.current_login_at %}
+						<span class="lastseen">Last seen {{user.current_login_at.strftime('%d %B %Y at %H:%M')}}</span>
+						- 
+					{% endif %}
 					{% if user.signup_date %}
-					- <span class="joined" title="{{user.signup_date.strftime('%d %B, %Y')}}">
+					<span class="joined" title="{{user.signup_date.strftime('%d %B, %Y')}}">
 							Joined {{user.signup_date.strftime('%B %Y')}}
 						</span>
 					{% endif %}
