Max height for oembed iframes

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -487,12 +487,16 @@ a
 		+box-shadow-none
 		+media-xs
 			min-height: 334px
+			max-height: 334px
 		+media-sm
 			min-height: 434px
+			max-height: 434px
 		+media-md
 			min-height: 422px
+			max-height: 422px
 		+media-lg
 			min-height: 476px
+			max-height: 476px
 
 		&#twitter-widget-0, &.twitter-tweet, &.twitter-tweet-rendered
 			border: none !important
