Distinguish comments by OP

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1,13 +1,9 @@
 @import url(../css/font-borg.css)
 @import reset
 
-//$color_brand_main: lighten(desaturate(#0092A0, 65%), 15%) // # 296bb6 - serious blue 34495e, greenish 009587
-//$color_brand_main: #4d98a0
-//$color_brand_main: #0092A0
-$color_brand_main: #4D84A0 // 4D84A0 // 4D8DA0
+$color_brand_main: #4c7e93 // 4D84A0 + 4b7886 == 4c7e93
 
 $color_brand_secondary: #e74c3c // e74c3c - dc2900
-//$color_background: #f0f1f3 // f0f0f0 // f9f7f6
 $color_background: #EaEbEf
 $color_text: #444
 
@@ -908,6 +904,8 @@ a
 		left: 3px
 		bottom: 1px
 
+		&.network_member
+			left: 1px
 
 		&.bfct_trainer
 			position: relative
