Add link to roadmap in the sidebar

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1963,6 +1963,16 @@ fieldset
 				&.active
 					color: $color_brand_secondary
 
+.nav-sidebar.meta
+	background-color: transparent
+	border: none
+	margin: 0
+	padding: 0
+	font-size: 0.8em
+	+box-shadow-none
+	& p
+		padding: 10px 0 10px 15px
+		margin: 0
 
 /* Submit Dialog */
 .dialog, .dialog__overlay
