--- a/blender-today/application/templates/_sidebar.html
+++ b/blender-today/application/templates/_sidebar.html
@@ -74,4 +74,13 @@
 				You decide what makes the news
 			</p>
 		</div>
+
+		<div class="nav-sidebar meta">
+			<a href="http://blender.today/p/community/fcbbbc/blender-today-roadmap-feedback">
+				<p>
+					Roadmap & Feedback
+				</p>
+			</a>
+		</div>
+
 	</div>
