Use avatar in sidebar instead of icon

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1962,6 +1962,14 @@ fieldset
 				padding: 0 15px
 				&.active
 					color: $color_brand_secondary
+	& .nav-sidebar-avatar
+		height: 30px
+		width: 30px
+		background-size: cover
+		position: absolute
+		top: 5px
+		+border-radius(50%)
+		+box-shadow(2px, 2px, 0, black, .1)
 
 .nav-sidebar.meta
 	background-color: transparent
