Avoid long strings to go outside the box

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -499,6 +499,7 @@ a
 
 	& p
 		margin-bottom: 25px
+		word-break:	break-word
 		+media-xs
 			margin-bottom: 10px
 
@@ -1080,6 +1081,9 @@ div#post-comment-reply-container
 		margin-left: 80px
 	+media-lg
 		margin-left: 80px
+
+	& p
+		word-break: break-word
 
 .post-view-comments-item-details
 	display: block
