Link to feed in sidebar

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1963,7 +1963,7 @@ fieldset
 				float: right
 				margin-right: 10px
 			& a
-				padding: 0 15px
+				padding: 0 10px 0 15px
 				&.active
 					color: $color_brand_secondary
 	& .nav-sidebar-avatar
@@ -1981,10 +1981,14 @@ fieldset
 	margin: 0
 	padding: 0
 	font-size: 0.8em
+	text-align: center
 	+box-shadow-none
 	& p
-		padding: 10px 0 10px 15px
+		padding: 10px 0
 		margin: 0
+		& a
+			display: inline-block
+			padding: 0 5px 5px 5px
 
 /* Submit Dialog */
 .dialog, .dialog__overlay
